--- a/css/syles.css
+++ b/css/syles.css
@@ -16,6 +16,14 @@ p {
   font-family: 'Playfair Display', serif;
 }
 
+a {
+  color: #64a4bf;
+}
+
+a:hover {
+  color: #4b94b0;
+}
+
 .big-text1{
   text-align: left;
   font-size: 2.1em;
